GPv3: Draw surface projection artifacts at mesh boundaries #115895

Closed
opened 2023-12-07 14:30:04 +01:00 by Hans Goudey · 0 comments
Member

System Information
Operating system: Linux-6.6.2-201.fc39.x86_64-x86_64-with-glibc2.38 64 Bits, WAYLAND UI
Graphics card: AMD Radeon RX 6700 XT (navi22, LLVM 16.0.6, DRM 3.54, 6.6.2-201.fc39.x86_64) AMD 4.6 (Core Profile) Mesa 23.2.1

Blender Version
Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: (newest version of Blender that worked as expected)

Short description of error
Drawing on the edge of a mesh when using surface project creates bad geometry.

Exact steps for others to reproduce the error

  • Create a grid
  • Create GP
  • Draw, touching edge of grid
**System Information** Operating system: Linux-6.6.2-201.fc39.x86_64-x86_64-with-glibc2.38 64 Bits, WAYLAND UI Graphics card: AMD Radeon RX 6700 XT (navi22, LLVM 16.0.6, DRM 3.54, 6.6.2-201.fc39.x86_64) AMD 4.6 (Core Profile) Mesa 23.2.1 **Blender Version** Broken: version: 4.1.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: (newest version of Blender that worked as expected) **Short description of error** Drawing on the edge of a mesh when using surface project creates bad geometry. **Exact steps for others to reproduce the error** - Create a grid - Create GP - Draw, touching edge of grid
Hans Goudey added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-07 14:30:05 +01:00
Hans Goudey added this to the Grease Pencil project 2023-12-07 14:30:14 +01:00
Hans Goudey added
Module
Grease Pencil
Status
Confirmed
Type
Bug
and removed
Status
Needs Triage
Type
Report
labels 2023-12-07 14:30:29 +01:00
Falk David self-assigned this 2023-12-07 14:30:59 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-08 13:07:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115895
No description provided.