Fix #115895: Surface drawing artifacts at borders

The reason for the artifacts was that the depth (`placement_loc_`) was
not initialized in surface draw mode, but used in case we didn't hit a
surface in the projection.

This fixes the issue by using a default depth defined by the object
origin. Also applies for the `NearestStroke` placement.